# serial_pkt_protocol

./: .gitignore  CMakeLists.txt  README.md
include/: ctrl_protocol.h  mqtt_utils.h  pkt_protocol.h  pkt_protocol_buf.h  ring_buffer.h
src/: main.c  mqtt_utils.c  pkt_protocol.c  pkt_protocol_buf.c  ring_buffer.c
tests/: CMakeLists.txt  pkt_protocol_test.c
